--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
-    "react-router-dom": "^6.10.0"
+    "react-router-dom": "^6.10.0",
+    "recharts": "^2.10.3"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
